[gd_scene load_steps=5 format=3 uid="uid://qm8ijblbhiyt"]

[ext_resource type="Script" path="res://game/level/GridView.gd" id="1_a7a5u"]
[ext_resource type="PackedScene" uid="uid://bljmpbyn14lnb" path="res://game/level/hints/HintBar.tscn" id="2_q06jt"]
[ext_resource type="PackedScene" uid="uid://ducq8gqvrwpyh" path="res://game/level/cells/RegularCell.tscn" id="3_68xyc"]
[ext_resource type="PackedScene" uid="uid://dvauph5ly48yg" path="res://game/level/cells/CellCorner.tscn" id="4_tc07c"]

[node name="GridView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7a5u")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
use_top_left = true

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="TLPanel" type="Panel" parent="CenterContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="HintBarTop" parent="CenterContainer/GridContainer" instance=ExtResource("2_q06jt")]
layout_mode = 2
is_horizontal = true

[node name="TRPanel" type="Panel" parent="CenterContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="HintBarLeft" parent="CenterContainer/GridContainer" instance=ExtResource("2_q06jt")]
layout_mode = 2

[node name="Horizontal" parent="CenterContainer/GridContainer/HintBarLeft" index="0"]
visible = false

[node name="Columns" type="VBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Row1" type="HBoxContainer" parent="CenterContainer/GridContainer/Columns"]
layout_mode = 2

[node name="RegularCell" parent="CenterContainer/GridContainer/Columns/Row1" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RegularCell2" parent="CenterContainer/GridContainer/Columns/Row1" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RegularCell3" parent="CenterContainer/GridContainer/Columns/Row1" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="Row2" type="HBoxContainer" parent="CenterContainer/GridContainer/Columns"]
layout_mode = 2

[node name="RegularCell" parent="CenterContainer/GridContainer/Columns/Row2" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RegularCell2" parent="CenterContainer/GridContainer/Columns/Row2" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RegularCell3" parent="CenterContainer/GridContainer/Columns/Row2" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="Row3" type="HBoxContainer" parent="CenterContainer/GridContainer/Columns"]
layout_mode = 2

[node name="RegularCell" parent="CenterContainer/GridContainer/Columns/Row3" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RegularCell2" parent="CenterContainer/GridContainer/Columns/Row3" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RegularCell3" parent="CenterContainer/GridContainer/Columns/Row3" instance=ExtResource("3_68xyc")]
layout_mode = 2

[node name="RPanel" type="Panel" parent="CenterContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="BLPanel" type="Panel" parent="CenterContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="BPanel" type="Panel" parent="CenterContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="BRPanel" type="Panel" parent="CenterContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="CellCornerGrid" type="GridContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = -177.0
offset_top = -168.0
offset_right = 248.0
offset_bottom = 257.0
mouse_filter = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 4

[node name="CellCorner" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner2" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner3" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner4" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner5" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner6" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner7" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner8" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner9" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner10" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner11" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner12" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner13" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner14" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner15" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="CellCorner16" parent="CellCornerGrid" instance=ExtResource("4_tc07c")]
layout_mode = 2

[node name="DragPreviewCanvas" type="CanvasLayer" parent="."]

[node name="DragPreviewLine" type="Line2D" parent="DragPreviewCanvas"]
width = 8.0
default_color = Color(0, 0, 0, 1)
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[editable path="CenterContainer/GridContainer/HintBarTop"]
[editable path="CenterContainer/GridContainer/HintBarLeft"]
[editable path="CenterContainer/GridContainer/Columns/Row1/RegularCell"]
[editable path="CenterContainer/GridContainer/Columns/Row1/RegularCell2"]
